[workspace]
resolver = "2"

members = [
    "mutiny-core",
    "mutiny-wasm",
]


# Tell `rustc` to optimize for small code size.
[profile.release.package.mutiny-core]
opt-level = "z"

[profile.release.package.mutiny-wasm]
opt-level = "z"

[patch.crates-io]
bitcoin = { git = "https://github.com/benthecarman/rust-bitcoin.git", branch = "testnet4-30-2" }

lightning = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-invoice = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-rapid-gossip-sync = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-background-processor = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-transaction-sync = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }
lightning-net-tokio = { git = 'https://github.com/benthecarman/rust-lightning.git', rev = "0fe1faaa387e77acc4ca62c5b006e78677b175ae" }

fedimint-client = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
fedimint-core = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
fedimint-wallet-client = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
fedimint-mint-client = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
fedimint-ln-client = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
fedimint-bip39 = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
fedimint-ln-common = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
fedimint-tbs = { git = 'https://github.com/MutinyWallet/fedimint.git', rev = "450d9f6d3b6252ad3d80f2e96717722cbb6dd9cf" }
